--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - id: get-changed-and-new-files
         name: Get changed and new Dockerfiles
+        shell: zsh
         # purpose of this hack is to work with PR as well as pull
         with:
           fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
@@ -30,6 +31,7 @@ jobs:
             fi
       - id: set-matrix
         name: Set matrix
+        shell: zsh
         run: |
           # open bracket 
           echo "::set-output name=matrix::$('[')"
