--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,12 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - id: get-changed-and-new-files
         name: Get changed and new Dockerfiles
-        shell: zsh
+        # shell: zsh
         # purpose of this hack is to work with PR as well as pull
         with:
           fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
+        # name: Get changed and new Dockerfiles
         run: |
             if ${{ github.event_name == 'pull_request' }}; then
               echo "::set-output name=changed_dockerfiles::$(git diff --name-only -r HEAD^1 HEAD | grep 'Dockerfile' |xargs)" >> $GITHUB_OUTPUT
@@ -31,7 +31,6 @@ jobs:
             fi
       - id: set-matrix
         name: Set matrix
-        shell: zsh
         run: |
           # open bracket 
           echo "::set-output name=matrix::$('[')"
