--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,12 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        name: Get changed and new Dockerfiles
-        # shell: zsh
+        name: checkout with the good fetch-depth
         # purpose of this hack is to work with PR as well as pull
         with:
           fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
-        # name: Get changed and new Dockerfiles
+      - id: get-changed-and-new-files
+        name: Get changed and new Dockerfiles
         run: |
             if ${{ github.event_name == 'pull_request' }}; then
               echo "::set-output name=changed_dockerfiles::$(git diff --name-only -r HEAD^1 HEAD | grep 'Dockerfile' |xargs)" >> $GITHUB_OUTPUT
