--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           # open bracket \
           echo "matrix=[" >> $GITHUB_OUTPUT \
-          for file in ${{ steps.get-changed-and-new-files.outputs.changed_dockerfiles }}; do
+          for file in "${{ steps.get-changed-and-new-files.outputs.changed_dockerfiles }}"; do
             echo "$file has changed or is new" >> $GITHUB_OUTPUT \
             echo "matrix=$matrix, $file" >> $GITHUB_OUTPUT \
           done \
