--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,8 +31,9 @@ jobs:
       - id: set-matrix
         name: Set matrix
         run: |
-          echo "matrix=$(echo ${{ steps.get-changed-and-new-files.outputs.changed_dockerfiles }} | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV \
-          if ${{ steps.set-matrix.outputs.matrix == '[""]'}}; then \
-            echo "matrix=[]">> $GITHUB_ENV \
-          echo "computed matrix=$steps.set-matrix.outputs.matrix" >> $GITHUB_STEP_SUMMARY
+          if [[-z changed_dockerfiles]]; then 
+            echo "matrix=[]" >> $GITHUB_ENV \
+          else
+            echo "matrix=$(echo $changed_dockerfiles | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV \
+          echo "computed matrix=$matrix" >> $GITHUB_STEP_SUMMARY
   
