--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,8 +32,9 @@ jobs:
         name: Set matrix
         run: |
           if [[-z changed_dockerfiles]]; then 
-            echo "matrix=[]" >> $GITHUB_ENV \
+            echo "matrix=[]" >> $GITHUB_ENV
           else
-            echo "matrix=$(echo $changed_dockerfiles | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV \
+            echo "matrix=$(echo $changed_dockerfiles | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
+          fi \
           echo "computed matrix=$matrix" >> $GITHUB_STEP_SUMMARY
   
