--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
       - id: set-matrix
         name: Set matrix
         run: |
-          if [[-z changed_dockerfiles]]; then 
+          if [[-n changed_dockerfiles]]; then 
             echo "matrix=[]" >> $GITHUB_ENV
           else
             echo "matrix=$(echo $changed_dockerfiles | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
