--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,21 +20,21 @@ jobs:
         # purpose of this hack is to work with PR as well as pull
         with:
           fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
-      - id: get-changed-and-new-files
+      - id: get-changed-and-new
         name: Get changed and new Dockerfiles
         run: |
             if ${{ github.event_name == 'pull_request' }}; then
-              echo "changed_dockerfiles=$(git diff --name-only -r HEAD^1 HEAD | grep 'Dockerfile' |xargs)" >> $GITHUB_OUTPUT
+              echo "dockerfiles=$(git diff --name-only -r HEAD^1 HEAD | grep 'Dockerfile' |xargs)" >> $GITHUB_OUTPUT
             else
-              echo "changed_dockerfiles=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep 'Dockerfile' | xargs)" >> $GITHUB_OUTPUT
+              echo "dockerfiles=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep 'Dockerfile' | xargs)" >> $GITHUB_OUTPUT
             fi
       - id: set-matrix
         name: Set matrix
         run: |
-          if ${{ changed_dockerfiles == ""}}; then 
+          if ${{ steps.get-changed-and-new.dockerfiles == ""}}; then 
             echo "matrix=[]" >> $GITHUB_ENV
           else
-            echo "matrix=$(echo $changed_dockerfiles | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
+            echo "matrix=$(echo $steps.get-changed-and-new.dockerfiles | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
           fi
       - id: summary
         run: |
