--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,5 +38,52 @@ jobs:
           fi
       - id: summary
         run: |
-          echo "computed matrix=${{ steps.set-matrix.outputs.matrix }}" >> $GITHUB_STEP_SUMMARY
+          echo "computed matrix=${{steps.set-matrix.outputs.matrix}}" >> $GITHUB_STEP_SUMMARY
+
+  build-images:
+    needs: list-dockerfiles
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix: 
+        dockerfile: ${{ fromJson(needs.list-dockerfiles.outputs.matrix) }}
+
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and export to Docker
+        uses: docker/build-push-action@v4
+        with:
+          file: ${{ matrix.dockerfile }}
+          load: true
+          tags: ${{ env.TEST_TAG }}
+      -
+        name: Test
+        run: |
+          docker run --rm ${{ env.TEST_TAG }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          file: ${{ matrix.dockerfile }}
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ env.LATEST_TAG }}
+
+
+
   
