--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,10 +31,10 @@ jobs:
       - id: set-matrix
         name: Set matrix
         run: |
-            echo "output=$(echo $steps.get-changed-and-new.dockerfiles | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
+            echo "output=$(echo ${{ steps.get-changed-and-new.dockerfiles }} | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
       - id: summary
         run: |
-          echo "computed matrix=${{steps.set-matrix.output}}" >> $GITHUB_STEP_SUMMARY
+          echo "computed matrix=${{ steps.set-matrix.output }}" >> $GITHUB_STEP_SUMMARY
 
   build-images:
     needs: list-dockerfiles
