--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
       - id: set-matrix
         name: Set matrix
         run: |
-            echo "output=$(echo ${{ steps.get-changed-and-new.dockerfiles }} | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
+            echo "output=$(echo ${{ dockerfiles }} | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
       - id: summary
         run: |
           echo "computed matrix=${{ steps.set-matrix.output }}" >> $GITHUB_STEP_SUMMARY
