--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
             if ${{ github.event_name == 'pull_request' }}; then
               echo "dockerfiles=$(git diff --name-only -r HEAD^1 HEAD | grep 'Dockerfile')" >> $GITHUB_OUTPUT
             else
-              echo "dockerfiles=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep 'Dockerfile' | xargs)" >> $GITHUB_OUTPUT
+              echo "dockerfiles=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep 'Dockerfile')" >> $GITHUB_OUTPUT
             fi
       - id: set-matrix
         name: Set matrix
