fix naming image

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -63,17 +63,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: name Image with tag "latest"
-        env:
-          GITHUB_REF: ${{ env.GITHUB_REF }}
+        name: name Image with tag "latest" on main branch
         run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/$(dirname ${{matrix.dockerfile}}):latest" >> $GITHUB_ENV
-        if: ${{ ${GITHUB_REF##*/} == "main" }}
+        if: ${{ env.GITHUB_REF_NAME == "main" }}
       -
-        name: name Image with tag <branch_name>
+        name: name Image with tag <branch_name> on non-main branch
         env:
           GITHUB_REF: ${{ env.GITHUB_REF }}
-        run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/$(dirname ${{matrix.dockerfile}}):${GITHUB_REF##*/}" >> $GITHUB_ENV
-        if: ${{ ${GITHUB_REF##*/} != "main" }}
+        run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/$(dirname ${{matrix.dockerfile}}):${{ env.GITHUB_REF_NAME }}" >> $GITHUB_ENV
+        if: ${{ env.GITHUB_REF_NAME != "main" }}
       -
         name: Build and export to Docker
         uses: docker/build-push-action@v4
