--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -65,13 +65,11 @@ jobs:
       -
         name: name Image with tag "latest" on main branch
         run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/$(dirname ${{matrix.dockerfile}}):latest" >> $GITHUB_ENV
-        if: ${{ env.GITHUB_REF_NAME == "main" }}
+        if: env.GITHUB_REF_NAME == 'main'
       -
         name: name Image with tag <branch_name> on non-main branch
-        env:
-          GITHUB_REF: ${{ env.GITHUB_REF }}
         run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/$(dirname ${{matrix.dockerfile}}):${{ env.GITHUB_REF_NAME }}" >> $GITHUB_ENV
-        if: ${{ env.GITHUB_REF_NAME != "main" }}
+        if: env.GITHUB_REF_NAME != 'main'
       -
         name: Build and export to Docker
         uses: docker/build-push-action@v4
