no USER, no WORKDIR on GHA

--- a/xelatex/Dockerfile
+++ b/xelatex/Dockerfile
@@ -1,18 +1,9 @@
 # going to CI !
 FROM debian:bullseye-slim
 
-WORKDIR /
-
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
        texlive-xetex \
-       texlive-fonts-extra\
-       make
-
-RUN groupadd -g 1001 xelatex && useradd --create-home --no-log-init -u 1001 -g 1001 xelatex
-
-USER xelatex
-
-WORKDIR /home/xelatex
+       texlive-fonts-extra
 
 CMD ["xelatex","--version"]
